--- a/app/views/templates/layout.html
+++ b/app/views/templates/layout.html
@@ -6,10 +6,12 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Document</title>
+    <title>Sample app</title>
     <link rel="stylesheet" href="/static/css/bootstrap.min.css">
+    <link rel="stylesheet" href="/static/css/form.css">
 </head>
 <body>
+    {{template "navbar"}}
     <div class="container text-center">
         {{template "content" .}}
     </div>
